--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -322,24 +322,25 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ##   repr_1.1.0               reprex_0.3.0            
 ##   rlang_0.4.6              rmarkdown_2.2           
 ##   rpart_4.1-15             rpf_1.0.4               
-##   rprojroot_1.3.2          rstudioapi_0.11         
-##   rvest_0.3.5              scales_1.1.1            
-##   selectr_0.4.2            sem_3.1.11              
-##   semTools_0.5.3           skimr_2.1.1             
-##   snakecase_0.11.0         splines_4.0.2           
-##   StanHeaders_2.21.0.5     statmod_1.4.34          
-##   stats_4.0.2              stats4_4.0.2            
-##   stringi_1.4.6            stringr_1.4.0           
-##   survival_3.1-12          sys_3.3                 
-##   testthat_2.3.2           tibble_3.0.1            
-##   tidyr_1.1.0              tidyselect_1.1.0        
-##   tidyverse_1.3.0          tinytex_0.23            
-##   tmvnsim_1.0-2            tools_4.0.2             
-##   utf8_1.1.4               utils_4.0.2             
-##   vctrs_0.3.1              viridis_0.5.1           
-##   viridisLite_0.3.0        whisker_0.4             
-##   withr_2.2.0              xfun_0.14               
-##   xml2_1.3.2               yaml_2.2.1
+##   rprojroot_1.3.2          rsconnect_0.8.16        
+##   rstudioapi_0.11          rvest_0.3.5             
+##   scales_1.1.1             selectr_0.4.2           
+##   sem_3.1.11               semTools_0.5.3          
+##   skimr_2.1.1              snakecase_0.11.0        
+##   splines_4.0.2            StanHeaders_2.21.0.5    
+##   statmod_1.4.34           stats_4.0.2             
+##   stats4_4.0.2             stringi_1.4.6           
+##   stringr_1.4.0            survival_3.1-12         
+##   sys_3.3                  testthat_2.3.2          
+##   tibble_3.0.1             tidyr_1.1.0             
+##   tidyselect_1.1.0         tidyverse_1.3.0         
+##   tinytex_0.23             tmvnsim_1.0-2           
+##   tools_4.0.2              utf8_1.1.4              
+##   utils_4.0.2              vctrs_0.3.1             
+##   viridis_0.5.1            viridisLite_0.3.0       
+##   whisker_0.4              withr_2.2.0             
+##   xfun_0.14                xml2_1.3.2              
+##   yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -4754,7 +4755,7 @@ Populations are typically quite large but, for the purpose of reviewing how we t
 
 It can be helpful to create a model that describes our data. Of course, the model won't describe every participant perfectly and each participant will differ to some extent from the model.
 
-\textbf{Model:} To create a model we first need data, which in this example will be the weight of three different chocolate chip cookies. The weight of each cookie is designated \(X_1\), \(X_2\), and \(X_3\), respectively. A simple model for our data is the mean, \(\mu\).
+\textbf{Model:} To create a model we first need data, which in this example will be the weight of three different chocolate chip cookies. As mentioned previously, the weights the three cookies are designated by \(X_1\), \(X_2\), and \(X_3\). A simple model for our cookie weight data is the mean, \(\mu\).
 
 \[
 \begin{aligned} 
@@ -4766,7 +4767,11 @@ It can be helpful to create a model that describes our data. Of course, the mode
 \end{aligned} 
 \]
 
-We can think of the ``mean cookie'' as our model, see Figure XX. The ``mean cookie'' is represented by \(\mu\).
+We can think of the ``mean cookie'' as our model for our cookie weight data, see Figure \ref{fig:meancookie}. The ``mean cookie'' is represented by \(\mu\) in equations.
+
+\begin{figure}
+\includegraphics[width=0.6\linewidth]{ch_populations/images/cookie} \caption{Variance as a fit index for the mean}\label{fig:meancookie}
+\end{figure}
 
 \textbf{Error:} As mentioned previously, each participant (i.e., cookie) differs to some extent from our model (``mean cookie''). In general this can be conceptualized as:
 
@@ -4804,20 +4809,16 @@ X_3 &= 10 + 2 \\
 \end{aligned} 
 \]
 
-The mean of the population, \(\mu = 10\), is a parameter that serves as model for the data. When we calculate a model for our data, it's helpful to have an index of how well the model fits the data. Or perhaps more accurately, it's helpful to have a single number that indicates extent to which the data (e.g., cookie weights) differs from the model.
+The mean of the population, \(\mu = 10\), is a parameter that serves as model for the cookie weight data. When we calculate a model for our data, it's helpful to have an index of how well the model fits the data. Or perhaps more accurately, it's helpful to have a single number that indicates extent to which the data (e.g., cookie weights) differs from the model.
 
 \hypertarget{variance-sigma2}{%
 \subsection{\texorpdfstring{Variance (\(\sigma^2\))}{Variance (\textbackslash sigma\^{}2)}}\label{variance-sigma2}}
 
-Variance is a simple way of calculating how well data differs from the model. It is represented by the symbol \(\sigma^2\).
-
-\begin{figure}
-\includegraphics[width=0.6\linewidth]{ch_populations/images/cookie} \caption{Variance as a fit index for the mean}\label{fig:meancookie}
-\end{figure}
+Variance is a simple way of calculating how data differs from the model. It is represented by the symbol \(\sigma^2\).
 
 We want to index the extent to which the data differs from the model -- that is, we want to see the extent to which the cookie weights differ from our ``mean cookie'' model. Variance is a simple approach to assessing the fit of the model - or more accurately the lack of fit of our model.
 
-\textbf{Why use squared errors?} Error, the extent to which the data deviates from the model, is calculated using squared differences. That is, take each data point, subtract the model value, and then square the resulting number (e.g., \((8 - 10)^2 = 4\)). It probably strikes you as an odd choice to square the difference between each data point and the model. Why not just take the difference (e.g., \((8 - 10) = -2\)) or take the absolute difference (e.g., \(|8 - 10|= 2\))? The answer is somewhat complex, but it relates to the more general situation in statistics of trying to find models that best fit the data (which occurs by minimizing error). When we use error as the squared difference it is easier to apply calculus, via derivatives, to calculate a model that minimizes the errors (i.e., obtains the best fit). Long story short, for complex statistical reasons, we use squared differences to index error rather than other approaches.
+\textbf{Why use squared errors?} Error, the extent to which the data deviates from the model, is calculated using squared differences. That is, take each data point, subtract the model value, and then square the resulting number (e.g., \((8 - 10)^2 = 4\)). It probably strikes you as an odd choice to square the difference between each data point and the model. Why not just take the difference (e.g., \((8 - 10) = -2\)) or take the absolute difference (e.g., \(|8 - 10|= 2\))? The answer is somewhat complex, but it relates to the more general situation in statistics of trying to find models that best fit the data (which occurs by minimizing errors). When we use error as the squared difference it is easier to apply calculus, via derivatives, to calculate a model that minimizes the errors (i.e., obtains the best fit). Long story short, for complex statistical reasons, we use squared differences to index error rather than other approaches.
 
 \begin{longtable}[]{@{}lll@{}}
 \toprule
@@ -4830,7 +4831,7 @@ Cookie Mass & Model & Error = Squared Difference\tabularnewline
 \bottomrule
 \end{longtable}
 
-You can see in the table above that we can calculate the squared differences for data points 1 through 3. The squared differences are 4, 0, and 4, respectively. We combine these numbers into a single index by taking an average. This calculation, \((4 + 0 + 4)/3 = 2.67\), tells us the average of the squared deviations from the model is 2.67 grams\(^2\). We refer to this value as variance.
+You can see in the table above that we can calculate the squared differences for data points 1 through 3 (i.e., cookie weights 1 through 3). The squared differences are 4, 0, and 4, respectively. We combine these numbers into a single index by taking an average. This calculation, \((4 + 0 + 4)/3 = 2.67\), tells us the average of the squared deviations from the model is 2.67 grams\(^2\). Because we squared the differences the units are also squared; in this case grams\(^2\). .We refer to 2.67 grams\(^2\) as the variance.
 
 Recall the formula for calculating an avearge:
 
@@ -4854,9 +4855,7 @@ You can see from the formula for variance below that variance is just an average
 \end{aligned} 
 \]
 
-\emph{Note}: Because we squared the differences the units for variance are also squared. In this case, that means the units for variance are grams\(^2\) not grams.
-
-\textbf{Interpretation}. A variance of zero indicates that the model fits the data perfectly. In this case, if the variance was zero, that would indicate that all the cookie had the same mass, exactly 10 grams. To the extent that the variance is larger than zero it implies that the model is not a perfect fit for the data. A large variance indicate that many of the of the data points fall far from the model (i.e., the mean). By implication, the larger variance indicates the larger the differences among the observations (e.g., cookies).
+\textbf{Interpretation}. A variance of zero indicates that the model fits the data perfectly. In the cookie case, if the variance was zero, that would indicate that all the cookies had the same mass as the model, exactly 10 grams. To the extent that the variance is larger than zero it implies data points (i.e., cookie weights) differ from the model (i.e., the mean cookie). By implication, a larger variance indicates larger differences among the observations (e.g., cookie weights). That is, when the variance is small, cookie weights tend to similar to the model -- and each other. In contrast, when the variance is large, cookie weights tend to different from the model -- and each other.
 
 \hypertarget{standard-deviation-sigma}{%
 \subsection{\texorpdfstring{Standard Deviation (\(\sigma\))}{Standard Deviation (\textbackslash sigma)}}\label{standard-deviation-sigma}}
