--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -26,7 +26,7 @@ $$
 \end{aligned} 
 $$
 
-Sometimes, to simplify the notation, the numbers above and below the $\Sigma$ symbol are omitted. Likewise, the $i$ subscript is omitted. There is a general understanding that these components of the notation are omitted that the version of the notation above is implied.
+Sometimes, to simplify the notation, the numbers above and below the $\Sigma$ symbol are omitted. Likewise, the $i$ subscript is omitted. There is a general understanding that when these components of the notation are omitted the version of the notation above is implied.
 
 $$
 \begin{aligned} 
@@ -37,7 +37,7 @@ $$
 $$
 
 
-**Calculating a mean**. The full version of the notation can be used to indicate how anb= average/mean is calculated.
+**Calculating a mean**. The full version of the notation can be used to indicate how an average/mean is calculated.
 
 
 $$
@@ -90,15 +90,15 @@ $$
 
 ## Population vs samples
 
-As we move closer to conducting our own research it is critical to make a distinction between populations and samples. A population is the complete set of people/animals about which we want to make conclusions. A samples is a subset of the total number of people/animals in the population. In most scenarios it is impractical to work with an entire population and, for practical reasons, we study a subset of the population called a sample. 
+As we move closer to conducting our own research it is critical to make a distinction between populations and samples. A population is the complete set of people/animals about which we want to make conclusions. A sample is a randomly selected subset of the population. In most scenarios it is impractical to work with an entire population and, for practical reasons, we study a subset of the population called a sample. 
 
-Researchers, and consumers of research, typically have little interest in making conclusions at the sample level. In general, we care about conclusions that generalize to the population but not conclusions that only apply to specific individuals in the sample. Consider the case of COVID-19. Imagine a team of researchers creates a vaccine that they hope generates immunity to COVID-19. We care very little if the immunity only works for the specific individuals in the study. However, we care a great deal if the immunity works, or is likely to work, for all Canadians or all humans. Thus, we study samples but typically wish to make conclusions that apply to the population.
+Researchers, and consumers of research, typically have little interest in making conclusions at the sample level. In general, we care about conclusions that generalize to the population but not conclusions that only apply to specific individuals in the sample. Consider the case of COVID-19. Imagine a research team creates a vaccine that they hope generates immunity to COVID-19. We care very little if the immunity only works for the specific individuals in the study. However, we care a great deal if the immunity works, or is likely to work, for all Canadians or all humans. Thus, we study samples but typically wish to make conclusions that apply to the population.
 
 Statistic tests are a means of helping researchers use sample data to make conclusions at the population level. When we calculate a number that summarises an attribute of all of the people/animals in the population we refer to it as a **parameter**. 
 
 ## A small population
 
-Populations are typically quite large but, for the purpose of reviewing how we typically describe populations, we focus on a population of just three chocolate chip cookies. We refer to the three cookies as $X_1$, $X_2$, and $X_3$. The cookies have the weights of 8, 10, and 12 grams, respectively. 
+In this section we review how to calculate three commonly used population parameters. Populations are typically quite large but for simplicity we focus on a population of composed of the weights of just three chocolate chip cookies. We refer to the three cookies as $X_1$, $X_2$, and $X_3$. The cookies have the weights of 8, 10, and 12 grams, respectively. 
 
 ### Mean ($\mu$)
 
@@ -170,7 +170,7 @@ The mean of the population, $\mu = 10$, is a parameter that serves as model for 
 
 Variance is a simple way of calculating how data differs from the model. It is represented by the symbol $\sigma^2$.
 
-We want to index the extent to which the data differs from the model -- that is, we want to see the extent to which the cookie weights differ from our "mean cookie" model. Variance is a simple approach to assessing the fit of the model - or more accurately the lack of fit of our model. 
+We want to index the extent to which the data differs from the model -- that is, we want to see the extent to which the cookie weights differ from our "mean cookie" model. Variance is a simple approach to assessing the fit of a model - or more accurately the lack of fit of a model. 
 
 **Why use squared errors?** Error, the extent to which the data deviates from the model, is calculated using squared differences. That is, take each data point, subtract the model value, and then square the resulting number (e.g., $(8 - 10)^2 = 4$). It probably strikes you as an odd choice to square the difference between each data point and the model. Why not just take the difference (e.g., $(8 - 10) = -2$) or take the absolute difference (e.g., $|8 - 10|= 2$)? The answer is somewhat complex, but it relates to the more general situation in statistics of trying to find models that best fit the data (which occurs by minimizing errors). When we use error as the squared difference it is easier to apply calculus, via derivatives, to calculate a model that minimizes the errors (i.e., obtains the best fit). Long story short, for complex statistical reasons, we use squared differences to index error rather than other approaches.
 
@@ -181,9 +181,9 @@ We want to index the extent to which the data differs from the model -- that is,
 | $X_2 = 10$  |  $\mu = 10$ |  $(X_2 - \mu)^2 =(10 - 10)^2= 0$ |
 | $X_3 = 12$  |  $\mu = 10$ |  $(X_3 - \mu)^2 =(12 - 10)^2= 4$ |
 
-You can see in the table above that we can calculate the squared differences for data points 1 through 3 (i.e., cookie weights 1 through 3). The squared differences are 4, 0, and 4, respectively. We combine these numbers into a single index by taking an average. This calculation, $(4 + 0 + 4)/3 = 2.67$, tells us the average of the squared deviations from the model is 2.67 grams$^2$. Because we squared the differences the units  are also squared; in this case grams$^2$. .We refer to 2.67 grams$^2$ as the variance. 
+You can see in the table above that we can calculate the squared differences for data points 1 through 3 (i.e., cookie weights 1 through 3). The squared differences are 4, 0, and 4, respectively. We combine these numbers into a single index by taking an average. This calculation, $(4 + 0 + 4)/3 = 2.67$, tells us the average of the squared deviations from the model is 2.67 grams$^2$. Because we squared the differences the units  are also squared; in this case grams$^2$. We refer to 2.67 grams$^2$ as the variance. 
 
-Recall the formula for calculating an avearge:
+Recall the formula for calculating an average:
 
 $$
 \begin{aligned} 
@@ -237,7 +237,7 @@ We encourage you to think primarily in terms of variance rather than standard de
 library(learnSampling)
 library(tidyverse)
 
-# varible means, d-value of 0.5
+# variable means, d-value of 0.5
 hdata1 <- get_height_population(mdiff = 5, std = 10)
 hdata1$sex <- as.factor(hdata1$sex)
 hdata1$dvalue <- 0.5
